# VoIPCheck

./: .gitignore  .pylintrc  LICENSE.txt  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
src/voipcheck/: __init__.py  voipcheck.py
