[metadata]
name = voipcheck
version = attr: voipcheck.__version__
author = Keith Gorlen
author_email = kgorlen@gmail.com
description = Check VoIP adapter status and ping healthchecks.io with results.
long_description = file: README.md, LICENSE.txt
url = https://github.com/kgorlen/voipcheck
keywords = Cisco ATA 191,healthchecks
license = SPDX: MIT
classifiers = 
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    beautifulsoup4==4.12.2
    build==1.2.2.post1
    certifi==2025.1.31
    charset-normalizer==3.4.1
    chromedriver-autoinstaller>=0.6.4
    colorama==0.4.6
    idna==3.10
    packaging==24.2
    platformdirs==4.3.6
    pyproject_hooks==1.2.0
    requests==2.32.3
    selenium==4.10.0
    webdriver-manager==3.8.6
    keyring==24.2.0
    playwright>=1.37.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    voipcheck = voipcheck.voipcheck:cli
