[metadata]
name = voipcheck
version = attr: voipcheck.__version__
author = Keith Gorlen
author_email = kgorlen@gmail.com
description = Check VoIP adapter status and ping healthchecks.io with results.
long_description = file: README.md, LICENSE.txt
url = https://github.com/kgorlen/voipcheck
keywords = Cisco ATA 191,healthchecks
license = SPDX: MIT
classifiers = 
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    build>=1.2.2.post1
    beautifulsoup4==4.13.3
    platformdirs>=4.3.6
    keyring>=24.2.0
    playwright==1.58.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    voipcheck = voipcheck.voipcheck:cli
